# DonatiPlan

./: .gitignore  CONTRIBUTING.md  KULLANIM.md  README.md  RebarFlow-Baslat.cmd  RebarFlow-Kur.cmd  SECURITY.md
backend/: pyproject.toml
backend/assets/: RebarFlow-BBS-Sablonu.xlsx
backend/src/rebarflow/: __init__.py  api.py  importers.py  models.py  optimizer.py  reports.py  service.py  store.py
backend/src/rebarflow.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
backend/tests/: test_api.py  test_importers.py  test_optimizer.py  test_store.py
docs/: OPTIMIZER_BENCHMARK.md
examples/: sample_bbs.csv
examples/field-pilot/: hatali_eksik_kolon_bbs.csv  hatali_eksik_kolon_bbs.xlsx  hatali_veri_kalitesi_bbs.csv  hatali_veri_kalitesi_bbs.xlsx  karisik_caplar_bbs.csv  karisik_caplar_bbs.xlsx  kucuk_kolon_kiris_bbs.csv  kucuk_kolon_kiris_bbs.xlsx  orta_kat_donati_bbs.csv  orta_kat_donati_bbs.xlsx
frontend/: index.html  package.json  pnpm-lock.yaml
frontend/public/: manifest.webmanifest  sw.js
frontend/src/: App.tsx  QrScanner.tsx  api.ts  main.tsx  styles.css  types.ts
scripts/: check.ps1  setup.ps1  start-dev.ps1
